# felix-ce

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
app/: .env.example
app/backend/: requirements.txt  vercel.json  wsgi.py
app/backend/api/: generate.py  outfits.py  video.py
app/frontend/: .env.production  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vercel.json
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/components/: CaptureScreen.tsx  GenderScreen.tsx  LoadfingScreen.tsx  LoadingScreen.tsx  ResultScreen.tsx  SelectScreen.tsx
configs/: model_costs.py
scripts/: dashboard.py  quick_benchmark.py  run_full_pipeline.py  run_image_generation.py  test_fal_connection.py  test_nanobanana.py
src/clients/: fal_client.py
src/core/: config.py
src/schemas/: artifacts.py  environment.py  generation.py  person.py
src/services/image_generation/: flux_pro_edit_service.py  gpt_image_service.py  kling_image_service.py  nano_banana_edit_service.py  nano_banana_service.py  qwen_edit_service.py
src/services/pipelines/: image_pipeline.py  video_pipeline.py
src/services/prompt_builder/: image_prompt_service.py
src/services/video_generation/: grok_service.py  hunyuan_service.py  kling_service.py  ltx_service.py  luma_service.py  pika_service.py  seedance_service.py  veo3_service.py
src/utils/: file_utils.py  image_encoding.py  json_utils.py
src/video_benchmark_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
