[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-benchmark-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fal-client",
    "pydantic>=2",
    "python-dotenv",
    "pyyaml",
    "loguru",
    "tenacity",
    "httpx",
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "Pillow",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]